--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Debut/vendor/spdlog"]
 	path = Debut/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Debut/vendor/glfw"]
+	path = Debut/vendor/glfw
+	url = https://github.com/TheCherno/glfw/
